# kate-searches

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/: pull_request_template.md
deploy/: README.md  compose.yml  deploy.sh  env.example
docs/: 00_README.md  01_market_research.md  02_PRD.md  03_architecture.md  04_mvp_spec.md  05_ai_pipeline_prompts.md  06_pricing_unit_economics.md  (+6 more)
services/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
services/api/app/: __init__.py  config.py  main.py  metering.py
services/api/app/adapters/: __init__.py  base.py  cursors.py  registry.py  rss.py  scraper.py  sitemap.py
services/api/app/api/: routes.py
services/api/app/db/: __init__.py  engine.py  models.py  repositories.py
services/api/app/email/: client.py  notifications.py  templates.py
services/api/app/fetch/: __init__.py  base.py  cascade.py  crawl4ai_fetcher.py  firecrawl_fetcher.py  guard.py  httpx_fetcher.py
services/api/app/llm/: __init__.py  client.py
services/api/app/models/: __init__.py  documents.py  drafts.py  scoring.py
services/api/app/pipeline/: __init__.py  dedup.py  extract.py  generation.py  scoring.py
services/api/app/worker/: __init__.py  celery_app.py  errors.py  robots.py  schedule.py  tasks.py  throttle.py
services/api/scripts/: looton_seed.json  seed_looton.py
services/api/tests/: conftest.py  test_adapter_contract.py  test_adapters_rss_sitemap.py  test_celery_app.py  test_db_models.py  test_dedup.py  test_dedup_cluster.py  test_email.py  test_extract.py  test_fetch_throttle_robots.py  test_generate_budget_cap.py  test_generation.py  test_health.py  test_llm_client.py  test_metering.py  test_novelty_dedup.py  test_schedule.py  test_scoring.py  test_scraper.py  test_seed_looton.py  test_ssrf_guard.py
services/api/tests/integration/: test_budget_ledger.py  test_db_layer.py  test_generation_run.py  test_ingestion_ac1.py  test_llm_live.py  test_metering.py  test_metering_rls.py  test_rls.py  test_rls_ingestion.py  test_scoring_run.py  test_trial_and_reaper.py
(+145 files in other folders)
