[project]
name = "kate-searches-api"
version = "0.0.1"
description = "KateSearches AI/scraping pipeline (FastAPI)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "feedparser>=6.0",
    "trafilatura>=2.0",
    "instructor>=1.6",
    "litellm>=1.50",
    "langfuse>=2.50,<3",
    "celery[redis]>=5.4",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: требует запущенный Supabase CLI стек (RUN_DB_TESTS=1)",
    "live: реальный вызов LLM-провайдера (RUN_LIVE_LLM=1 + ключ)",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
